# loxygen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: generate_ast.py  print_ast.py
src/contract/: __init__.py
src/loxtest/: cli.py  plugin.py
src/loxygen/: environment.py  exceptions.py  expr.py  interpreter.py  lox_function.py  lox_instance.py  loxygen.py  nodes.py  parser.py  resolver.py  runtime.py  scanner.py  stmt.py  token.py
